--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ permalink: "/:title.html"
 
 # Setup
 title:            saif's website
+repository:       0xsirsaif/0xsaif.github.io
 url:              https://0xsaif.github.io
 baseurl:          /
 author: &default-author
