--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,11 @@ permalink: "/:title.html"
 # Setup
 title:            saif's website
 repository:       0xsirsaif/0xsaif.github.io
+url:              https://0xsirsaif.github.io/
 baseurl:          /
+author: &default-author
+  name:           Muhammad Saif
+  email:          muhamed.e.saif@gmail.com
 
 encoding: utf-8
 
