--- a/_config.yml
+++ b/_config.yml
@@ -69,30 +69,18 @@ sass:
 
 # Navigation
 nav:
-  # - name:           "code"
-  #   href:           "https://github.com/hawkw"
-  #   kind:           "dir"
-  # - name:           "art"
-  #   href:           "/portfolio"
-  #   kind:           "dir"
   - name:           "notes"
     href:           "/notes"
     kind:           "dir"
   - name:           "etc"
     href:           "/etc"
     kind:           "dir"
-  # - name:           "slides"
-  #   href:           "/slides"
-  #   kind:           "dir"
-  # - name:           "keys"
-  #   href:           "https://keybase.io/hawk"
-  #   kind:           "dir"
+  - name:           "journaling"
+    href:           "/journaling"
+    kind:           "dir"
   - name:           "about.md"
     href:           "/"
     kind:           "file"
-  # - name:           "colophon.md"
-  #   href:           "/colophon"
-  #   kind:           "file"
   - name:           "résumé.pdf"
     href:           "/Mohamed_Saif_Resume.pdf"
     kind:           "file"
